@@ -11,6 +11,7 @@ git-annex (7.20191011) UNRELEASED; urgency=medium
     when they become empty, further reducing the size of the git-annex branch.
   * OSX: Deal with symbolic link problem that caused git to not be included in
     the git-annex.dmg.
+  * Fix build with persistent-2.10.
 
  -- Joey Hess <id@joeyh.name>  Thu, 19 Sep 2019 11:11:19 -0400
 
